--- a/ressources/CSS/style.css
+++ b/ressources/CSS/style.css
@@ -2,6 +2,10 @@ html{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
 }
+
+ /* Header section */
+
+
 header{
     display: flex;
     height: 3.4rem;
@@ -42,3 +46,4 @@ nav{
     color: black;
     text-decoration: none;
 }
+
