--- a/ressources/CSS/style.css
+++ b/ressources/CSS/style.css
@@ -200,12 +200,39 @@ main{
 .course-content p:first-child{
     margin: .4rem 0;
 }
+#mobile-course-section {
+    padding: 1.6rem 0;
+    border: 1px solid rgb(216, 216, 216);
+}
+#mobile-course-section h2{
+    font-family: 'Open Sans', sans-serif;
+   color: rgb(109, 109, 109);
+   font-size: 2rem;
+   text-align: center;
+   margin: 0;
+}
+#courses-menu{
+    display: flex;
+    flex-direction: column;
+    padding: .8rem;
+    padding-bottom: 0;
+}
+.course-item{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.2rem;
+    font-weight: bold;
+   color: rgb(109, 109, 109);
+    background-color: rgb(226, 222, 222);
+    margin-bottom: .4rem;
+    padding:.8rem;
+    padding-bottom: 1.2rem;
+}
 
 /* Thesis section */
 #thesis-section{
-    background-color: rgb(243, 242, 242);
     padding-top: 1.6rem;
-    border-bottom:1px solid rgb(216, 216, 216);;
+    border-bottom:1px solid rgb(216, 216, 216);
+    
 }
 #thesis-section h2{
     font-family: 'Open Sans', sans-serif;
